--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,13 @@
 ---
-title: "Welcome"
+listing:
+  contents: posts
+  feed: true
+  sort: "date desc"
+  type: default
+  categories: true
+  sort-ui: false
+  filter-ui: false
+page-layout: full
 ---
-
-This is my personal blog. I write about software engineering, productivity, and life.
 
 
